[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scene/Product/EditButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/login.theme" type="Theme" id=2]
[ext_resource path="res://Scene/Login/BackButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/loginbg.png" type="Texture" id=7]
[ext_resource path="res://resources/save.stylebox" type="StyleBox" id=8]
[ext_resource path="res://Scene/Product/ProductProperty.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scene/Product/NewProduct.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.462745 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id=9]

[node name="NewProduct" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
theme = ExtResource( 2 )
texture = ExtResource( 7 )
expand = true
script = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false,
"_editor_description_": ""
}
ImageRectPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer/ImageRect")
EditImageButtonPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer/EditImageButton")
NamePropPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Left/NameProperty")
AmountPropPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Left/AmountProperty")
ModalPropPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Right/ModalProperty")
PricePropPath = NodePath("../NewProduct/VBoxContainer/MarginContainer/HBoxContainer/Right/PriceProperty")
SaveButtonPath = NodePath("VBoxContainer/MarginContainer/HBoxContainer/Middle/SaveButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BackButton" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 600.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 164.0
margin_bottom = 236.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="NameProperty" parent="VBoxContainer/MarginContainer/HBoxContainer/Left" instance=ExtResource( 9 )]
prop_name = "Nama"

[node name="AmountProperty" parent="VBoxContainer/MarginContainer/HBoxContainer/Left" instance=ExtResource( 9 )]
margin_top = 183.0
margin_bottom = 236.0
size_flags_vertical = 10
prop_name = "Jumlah"

[node name="Middle" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 356.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle"]
margin_right = 152.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer"]
margin_right = 152.0
margin_bottom = 150.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 142.0
margin_bottom = 140.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 132.0
margin_bottom = 19.0
text = "Gambar Produk"
align = 1

[node name="EditImageButton" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
visible = false
margin_left = 52.0
margin_top = 35.0
margin_right = 80.0
margin_bottom = 63.0

[node name="ImageRect" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 132.0
margin_bottom = 130.0
size_flags_horizontal = 7
size_flags_vertical = 7
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/Middle"]
margin_left = 44.0
margin_top = 183.0
margin_right = 108.0
margin_bottom = 236.0
rect_min_size = Vector2( 64, 53 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 10
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
text = "Save"

[node name="Right" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 396.0
margin_right = 560.0
margin_bottom = 236.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="ModalProperty" parent="VBoxContainer/MarginContainer/HBoxContainer/Right" instance=ExtResource( 9 )]
prop_name = "Modal"

[node name="PriceProperty" parent="VBoxContainer/MarginContainer/HBoxContainer/Right" instance=ExtResource( 9 )]
margin_top = 183.0
margin_bottom = 236.0
size_flags_vertical = 10
prop_name = "Harga"
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer/EditImageButton" to="." method="_on_EditImageButton_pressed"]
[connection signal="gui_input" from="VBoxContainer/MarginContainer/HBoxContainer/Middle/PanelContainer/MarginContainer/VBoxContainer/ImageRect" to="." method="_on_ImageRect_gui_input"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/Middle/SaveButton" to="." method="_on_SaveButton_pressed"]
